05.istio-service-mesh/01.istio-ingressgateway-imagincloud.yaml
# Create Deployment for imagincloud Gateway
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway-imagincloud
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-ingressgateway-imagincloud
      istio: ingressgateway-imagincloud
  template:
    metadata:
      labels:
        app: istio-ingressgateway-imagincloud
        istio: ingressgateway-imagincloud
    spec:
      serviceAccountName: istio-ingressgateway-service-account
      containers:
      - name: istio-proxy
        image: docker.io/istio/proxyv2:1.22.0  # Adjust if you use another version
        ports:
        - containerPort: 8080
        - containerPort: 8443
        - containerPort: 15021
        args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --serviceCluster
        - istio-ingressgateway-imagincloud
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 2000m
            memory: 1024Mi

---

# Create LoadBalancer Service for imagincloud Gateway
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-imagincloud
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway-imagincloud
  ports:
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
